@@ -50,6 +50,7 @@ A reset of the database is needed.
 - https://github.com/eclipse-syson/syson/issues/344[#344] [metamodel] Improve implementation of getName and getShortName
 - https://github.com/eclipse-syson/syson/issues/333[#333] [state-transition] Improve actions compartment for states
 - https://github.com/eclipse-syson/syson/issues/334[#334] [diagrams] Add State Transition View concepts in the General View diagram
+- https://github.com/eclipse-syson/syson/issues/388[#388] [details] Add Transition source and target to Core properties in the Details view
 
 === New features
 
